--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "pomelo-logger": "0.1.1",
         "csv": "0.3.6",
-        "moment": "2.8.3"
+        "moment": "2.8.3",
+        "string-format": "^0.5.0"
     }
 }
